made code compatible w Java 11